--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,18 @@
 {
-  "printWidth": 100,
-  "semi": true,
-  "singleQuote": true,
-  "tabWidth": 4,
-  "trailingComma": "all",
-  "useTabs": false
+    "printWidth": 100,
+    "semi": true,
+    "singleQuote": true,
+    "tabWidth": 4,
+    "trailingComma": "all",
+    "useTabs": false,
+    "overrides": [
+        {
+            "files": [
+                "*.json"
+            ],
+            "options": {
+                "tabWidth": 2
+            }
+        }
+    ]
 }
