--- a/package.json
+++ b/package.json
@@ -1,62 +1,64 @@
 {
-  "name": "notes-app",
-  "productName": "notes-app",
-  "version": "1.0.0",
-  "description": "My Electron application description",
-  "keywords": [],
-  "author": {
-    "name": "Serhii Untilov",
-    "email": "s.untilov@gmail.com"
-  },
-  "main": ".webpack/main",
-  "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
-  },
-  "devDependencies": {
-    "@electron-forge/cli": "^7.5.0",
-    "@electron-forge/maker-deb": "^7.5.0",
-    "@electron-forge/maker-rpm": "^7.5.0",
-    "@electron-forge/maker-squirrel": "^7.5.0",
-    "@electron-forge/maker-zip": "^7.5.0",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.5.0",
-    "@electron-forge/plugin-fuses": "^7.5.0",
-    "@electron-forge/plugin-webpack": "^7.5.0",
-    "@electron/fuses": "^1.8.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "@vercel/webpack-asset-relocator-loader": "1.7.3",
-    "autoprefixer": "^10.4.20",
-    "css-loader": "^6.0.0",
-    "electron": "33.0.2",
-    "eslint": "^8.0.1",
-    "eslint-plugin-import": "^2.25.0",
-    "fork-ts-checker-webpack-plugin": "^7.2.13",
-    "node-loader": "^2.0.0",
-    "prettier": "^3.3.3",
-    "style-loader": "^3.0.0",
-    "tailwindcss": "^3.4.14",
-    "ts-loader": "^9.2.2",
-    "ts-node": "^10.0.0",
-    "typescript": "^5.6.3"
-  },
-  "license": "MIT",
-  "dependencies": {
-    "@fontsource/caveat": "^5.1.0",
-    "@tiptap/extension-placeholder": "^2.9.1",
-    "@tiptap/pm": "^2.9.1",
-    "@tiptap/react": "^2.9.1",
-    "@tiptap/starter-kit": "^2.9.1",
-    "electron-squirrel-startup": "^1.0.1",
-    "postcss": "^8.4.47",
-    "postcss-loader": "^8.1.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-error-boundary": "^4.1.2"
-  }
+    "name": "notes-app",
+    "productName": "notes-app",
+    "version": "1.0.0",
+    "description": "My Electron application description",
+    "keywords": [],
+    "author": {
+        "name": "Serhii Untilov",
+        "email": "s.untilov@gmail.com"
+    },
+    "main": ".webpack/main",
+    "scripts": {
+        "start": "electron-forge start",
+        "package": "electron-forge package",
+        "make": "electron-forge make",
+        "publish": "electron-forge publish",
+        "lint": "eslint --ext .ts,.tsx .",
+        "test": "vitest"
+    },
+    "devDependencies": {
+        "@electron-forge/cli": "^7.5.0",
+        "@electron-forge/maker-deb": "^7.5.0",
+        "@electron-forge/maker-rpm": "^7.5.0",
+        "@electron-forge/maker-squirrel": "^7.5.0",
+        "@electron-forge/maker-zip": "^7.5.0",
+        "@electron-forge/plugin-auto-unpack-natives": "^7.5.0",
+        "@electron-forge/plugin-fuses": "^7.5.0",
+        "@electron-forge/plugin-webpack": "^7.5.0",
+        "@electron/fuses": "^1.8.0",
+        "@types/react": "^18.3.12",
+        "@types/react-dom": "^18.3.1",
+        "@typescript-eslint/eslint-plugin": "^5.0.0",
+        "@typescript-eslint/parser": "^5.0.0",
+        "@vercel/webpack-asset-relocator-loader": "1.7.3",
+        "autoprefixer": "^10.4.20",
+        "css-loader": "^6.0.0",
+        "electron": "33.0.2",
+        "eslint": "^8.0.1",
+        "eslint-plugin-import": "^2.25.0",
+        "fork-ts-checker-webpack-plugin": "^7.2.13",
+        "node-loader": "^2.0.0",
+        "prettier": "^3.3.3",
+        "style-loader": "^3.0.0",
+        "tailwindcss": "^3.4.14",
+        "ts-loader": "^9.2.2",
+        "ts-node": "^10.0.0",
+        "typescript": "^5.6.3",
+        "vitest": "^2.1.3"
+    },
+    "license": "MIT",
+    "dependencies": {
+        "@fontsource/caveat": "^5.1.0",
+        "@tiptap/extension-placeholder": "^2.9.1",
+        "@tiptap/pm": "^2.9.1",
+        "@tiptap/react": "^2.9.1",
+        "@tiptap/starter-kit": "^2.9.1",
+        "electron-squirrel-startup": "^1.0.1",
+        "postcss": "^8.4.47",
+        "postcss-loader": "^8.1.1",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-error-boundary": "^4.1.2"
+    }
 }
