--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "jsx": "react-jsx",
+    "types": ["vitest/importMeta"],
     "paths": {
       "@/*": ["./src/*"],
       "*": ["node_modules/*"]
